deploy: 16cf0a478d8aa78628ecae81d4b43ecb719f2703

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -105,22 +105,22 @@
 <a href="functions_v.html"/>
 <a href="functions_~.html"/>
 <a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
-<a href="functions_func.html"/>
+<a href="functions_func_b.html"/>
+<a href="functions_func_c.html"/>
+<a href="functions_func_d.html"/>
+<a href="functions_func_e.html"/>
+<a href="functions_func_f.html"/>
+<a href="functions_func_g.html"/>
+<a href="functions_func_i.html"/>
+<a href="functions_func_l.html"/>
+<a href="functions_func_m.html"/>
+<a href="functions_func_o.html"/>
+<a href="functions_func_p.html"/>
+<a href="functions_func_r.html"/>
+<a href="functions_func_s.html"/>
+<a href="functions_func_t.html"/>
+<a href="functions_func_u.html"/>
+<a href="functions_func_~.html"/>
 <a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
@@ -255,6 +255,7 @@
 <a href="classcrab_1_1Slice.html#a59543e750fa2a2ed4c883f1438cc2f88"/>
 <a href="classcrab_1_1Slice.html#a5bbe297dbdb07bdff665ff1b551775e3"/>
 <a href="classcrab_1_1Slice.html#a65da2b99b33fac36c61ffdc1a9974121"/>
+<a href="classcrab_1_1Slice.html#a672cb393c224884538f0b94eb5df3dc2"/>
 <a href="classcrab_1_1Slice.html#a6d0b415fc23f698efefc9f71f29d0098"/>
 <a href="classcrab_1_1Slice.html#a7313dc58f9a1b5b706351db2c6eb21e7"/>
 <a href="classcrab_1_1Slice.html#a745bc1b152bb22797910112b1827b7ed"/>
@@ -270,6 +271,7 @@
 <a href="classcrab_1_1Slice.html#aab020cc70b1118206a6bbb4d8273f28c"/>
 <a href="classcrab_1_1Slice.html#aab42409dc29cf2a02df69f2ad6fb0120"/>
 <a href="classcrab_1_1Slice.html#aab725dae4bc9cc7da719c94a1fbb36b8"/>
+<a href="classcrab_1_1Slice.html#aae0a2bab18d0aae0e0c5550020d2e909"/>
 <a href="classcrab_1_1Slice.html#aaf6c89c85e609a4b3b61e8f4d66f9b98"/>
 <a href="classcrab_1_1Slice.html#aba5dd37dd7d561c69587c67a0c9fb9a1"/>
 <a href="classcrab_1_1Slice.html#abcd92ee44066c8a4ffb9bf339d04ee9e"/>
@@ -284,6 +286,7 @@
 <a href="classcrab_1_1StaticRingBuffer.html"/>
 <a href="classcrab_1_1StaticRingBuffer.html#a02dcb4be550a2e20197a4b7d794a86c7"/>
 <a href="classcrab_1_1StaticRingBuffer.html#a1539f202c437554987d4c4319f8c29c4"/>
+<a href="classcrab_1_1StaticRingBuffer.html#a1f8808daeb6d9f0b6236ad0796676feb"/>
 <a href="classcrab_1_1StaticRingBuffer.html#a2b1c1a31356417dfdc99eaa1484df250"/>
 <a href="classcrab_1_1StaticRingBuffer.html#a31389552331601072abc11fd1ca9a180"/>
 <a href="classcrab_1_1StaticRingBuffer.html#a490d0facae0ba386a2900e7856dfbd4b"/>
@@ -298,7 +301,6 @@
 <a href="classcrab_1_1StaticRingBuffer.html#aadea9b1c6c9d926391ca3c079a527677"/>
 <a href="classcrab_1_1StaticRingBuffer.html#ac572632853f958153070f0e932de1d4b"/>
 <a href="classcrab_1_1StaticRingBuffer.html#acfa9d2a8a44d8ef505467c20edbd6ae9"/>
-<a href="classcrab_1_1StaticRingBuffer.html#ae31d4085662ca223a26699ac346a52f7"/>
 <a href="classcrab_1_1StaticRingBuffer.html#af294d180d2ab15b35af05a6825924913"/>
 <a href="classcrab_1_1StaticVector.html"/>
 <a href="classcrab_1_1StaticVector.html#a0514ccde34c3b515cf5c441a412d4ed3"/>
@@ -317,6 +319,7 @@
 <a href="classcrab_1_1StaticVector.html#a4110e761e8bfce4e596cbb1a10986539"/>
 <a href="classcrab_1_1StaticVector.html#a4245292876228ba2c9f65c81dd8f8e0f"/>
 <a href="classcrab_1_1StaticVector.html#a43bf5a7b613dde2282d2d20a3f2bc91a"/>
+<a href="classcrab_1_1StaticVector.html#a44342e918d329f945d40e83e511a533c"/>
 <a href="classcrab_1_1StaticVector.html#a4d47004c9b063ea7beb2c74b53e53c63"/>
 <a href="classcrab_1_1StaticVector.html#a5376b73b1aa409884bf8d80c219aec0c"/>
 <a href="classcrab_1_1StaticVector.html#a57d8c45d0db01aa324a9618fb4a06c43"/>
@@ -328,6 +331,7 @@
 <a href="classcrab_1_1StaticVector.html#a890c25f46d647e5c1686d1f8187ed77a"/>
 <a href="classcrab_1_1StaticVector.html#a8d5add6086580015174a0486b9b0486f"/>
 <a href="classcrab_1_1StaticVector.html#a9168fae2af2de519d7a91b30f02a613e"/>
+<a href="classcrab_1_1StaticVector.html#a931e9d6633f2cc485f1fa25c44de23b5"/>
 <a href="classcrab_1_1StaticVector.html#a963619ac1732243ad4879fa5c497a7ec"/>
 <a href="classcrab_1_1StaticVector.html#a969e3f3cc1cea0b682c0628912e820db"/>
 <a href="classcrab_1_1StaticVector.html#a97c4f865cfbbaddf0d3de11ca4f273f5"/>
@@ -360,6 +364,22 @@
 <a href="functions_e.html"/>
 <a href="functions_f.html"/>
 <a href="functions_func.html"/>
+<a href="functions_func_b.html"/>
+<a href="functions_func_c.html"/>
+<a href="functions_func_d.html"/>
+<a href="functions_func_e.html"/>
+<a href="functions_func_f.html"/>
+<a href="functions_func_g.html"/>
+<a href="functions_func_i.html"/>
+<a href="functions_func_l.html"/>
+<a href="functions_func_m.html"/>
+<a href="functions_func_o.html"/>
+<a href="functions_func_p.html"/>
+<a href="functions_func_r.html"/>
+<a href="functions_func_s.html"/>
+<a href="functions_func_t.html"/>
+<a href="functions_func_u.html"/>
+<a href="functions_func_~.html"/>
 <a href="functions_g.html"/>
 <a href="functions_i.html"/>
 <a href="functions_l.html"/>
